[tool.poetry]
name = "your-project-name"
version = "0.1.0"
description = "A brief description of your project"
authors = ["Your Name <you@example.com>"]
license = "MIT"  # You can change the license if needed
readme = "README.md"  # Ensure this file exists in your project

# Python version compatibility
[tool.poetry.dependencies]
python = "^3.11"  # Adjust the Python version as needed
PyYAML = "^6.0"  # PyYAML version, adjust as per your requirement

[tool.poetry.dev-dependencies]
# Add any development dependencies here (e.g., linters, testing tools, etc.)
pytest = "^7.0"  # Example: for testing

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
